--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.3'
 services:
   vrising:
     image: diyagi/vrising-server-docker:latest
@@ -13,6 +12,9 @@ services:
       PGID: 1001
       VR_NAME: "V Rising Docker Server"
       VR_DESCRIPTION: "V Rising server hosted on Docker"
+      VR_RCON_ENABLED: true
+      VR_RCON_PASSWORD: "rconPassword"
+      VR_RCON_PORT: 25575
       VR_GAME_PORT: 9876
       VR_QUERY_PORT: 9877
       VR_LIST_ON_EOS: true
@@ -21,3 +23,4 @@ services:
     volumes:
     - ./awesome-vrising-server/server:/vrising/server
     - ./awesome-vrising-server/data:/vrising/data
+    - ./awesome-vrising-server/announce:/vrising/announce # Only needed if you are using Auto Announce
